Add summaries for period of 2024-10-21 to 2024-10-25; fetch latest personal issues

--- a/personal-issues/1735.md
+++ b/personal-issues/1735.md
@@ -1,5 +1,5 @@
 title:	Vipul Monday checklist | 2024-10-21
-state:	OPEN
+state:	CLOSED
 author:	vipulnaik
 labels:	
 comments:	0
@@ -25,10 +25,16 @@ number:	1735
 
 ## Personal chores
 
+### Cooking and food purchases
+
+- [x] ~5 minutes: Lentils prep https://github.com/vipulnaik/diet-exercise-health/commit/46730bbbebcd64b0c24eb1b72f431771c8d1e893
 ### Health research, appointments, recording
 
 - [x] ~1 hour: Document my health journey (private repo)
 - [x] ~20 minutes: Update blood test plans https://github.com/vipulnaik/diet-exercise-health/commit/29dd75f9104dc319159cc3fe61549b5b16a23ade https://github.com/vipulnaik/diet-exercise-health/commit/976e7a4438652537f27eb8195fcc1cabfa61ce61
+- [x] ~3 minutes: Take a breath test reading https://github.com/vipulnaik/diet-exercise-health/commit/3669a7150f7f79039e16d6a395217a63809283ca
+- [x] ~3 minutes: Take a pulse oximeter reading https://github.com/vipulnaik/diet-exercise-health/commit/bbfb22f8ee578574023ef0b57c8c7a02703b7e4f
+- [x] ~3 minutes: Record updates regarding ongoing health issues https://github.com/vipulnaik/diet-exercise-health/commit/fc658d3cf019a59b760b96e3f2ddb9993ea29cea
 
 ### Trash and recycling
 
@@ -38,10 +44,15 @@ number:	1735
 
 - [x] ~24 minutes: Regular laundry (larger load than usual, extra pickup trip)
 
+### Updates tracking and planning
+
+- [x] ~16 minutes: Add summaries for past week https://github.com/vipulnaik/daily-updates/commit/06e041762ec03fcf2905e300d3678c8f2c290171
+- [x] ~7 minutes: Make various updates to my standing plan https://github.com/vipulnaik/daily-updates/commit/8dd78dd77460aa71467680a2f6c2ebcbfbac8622
+
 ## Other activities
 
 ### Medical education
 
 - [x] ~40 minutes: Watch Ninja Nerd videos (new content, starting the endocrine medicine playlist)
-- [x] ~20 minutes: Watch another video also on the endocrine system
+- [x] ~30 minutes: Watch another video also on the endocrine system
 - [x] ~15 minutes: Finish up a video series I've been listening to (this last portion actually didn't contain technical stuff though it did have a bunch of meta commentary -- so it doesn't quite count as POCS)
