Pull in an update to 2024-10-25 personal chores time spent; fetch latest personal issues

--- a/personal-issues/1739.md
+++ b/personal-issues/1739.md
@@ -32,6 +32,10 @@ number:	1739
 
 - [x] ~10 minutes: Get toiletries from Walgreens after getting my flu shot
 
+### Quarterly cleaning tasks
+
+- [x] ~5 minutes: Sort out and throw out old bills/receipts piled on my table, in preparation for workstation cleaning tomorrow
+
 ## Other activities
 
 ### One-off conversations
