Add summaries for period of 2024-10-26 to 2024-10-27; add week summary; fetch latest personal issues

--- a/personal-issues/1740.md
+++ b/personal-issues/1740.md
@@ -14,7 +14,7 @@ NOTE: I made this on 2024-10-25 and included things I had already completed earl
 
 - [x] Finish Linode migration
 - [x] Do some cleanup and robustification of the code now that the migration is complete
-- [ ] Implement dark mode on Wikipedia Views
+- [x] Implement dark mode on BART and Wikipedia Views
 
 ## Timelines wiki
 
