--- a/personal-issues/1741.md
+++ b/personal-issues/1741.md
@@ -1,5 +1,5 @@
 title:	Vipul Saturday checklist | 2024-10-26
-state:	OPEN
+state:	CLOSED
 author:	vipulnaik
 labels:	
 comments:	0
@@ -8,6 +8,12 @@ projects:
 milestone:	
 number:	1741
 --
+## Personal projects
+
+### Devops stuff
+
+- [x] ~45 minutes: Implement dark mode for BART and Wikipedia Views
+
 ## Personal chores
 
 ### Updates tracking and planning
@@ -17,3 +23,23 @@ number:	1741
 ### Quarterly cleaning tasks
 
 - [x] ~7 minutes: Quarterly cleaning of main workstation table
+
+### Administrative / bureaucratic / travel
+
+- [x] ~4 hours 0 minutes: Annual review and cleanup of document pouch, with a primary goal being streamlining for travel use cases (i.e., reducing the incremental effort needed when rearranging for international travel)
+
+## Other activities
+
+### One-off conversations
+
+- [x] ~7 minutes: Exchange a few messages
+
+### Medical education
+
+#### Ninja Nerd videos (focused learning with eyes on screen for the most part)
+
+- [x] ~30 minutes: Continue watching new content from the cardiovascular medicine playlist
+
+#### Other videos (not designed for concentrated education, eyes don't have to be on screen)
+
+- [x] ~1 hour 15 minutes: Continue listening to a video
