Add summaries for period of 2024-10-28 to 2024-11-01; add October 2024 month summary; fetch latest personal issues

--- a/personal-issues/1740.md
+++ b/personal-issues/1740.md
@@ -1,5 +1,5 @@
 title:	Vipul personal projects priorities | week of 2024-10-21 to 2024-10-27
-state:	OPEN
+state:	CLOSED
 author:	vipulnaik
 labels:	
 comments:	0
@@ -22,5 +22,11 @@ NOTE: I made this on 2024-10-25 and included things I had already completed earl
 
 ### Aspirational (time permitting)
 
+I didn't get around to doing these.
+
 - [ ] Scheduled update for timeline of web vitals
 - [ ] Update timeline of H-1B and put it in my list of regularly updated timelines
+
+### Not in the plan, but executed
+
+- [x] Work on cellbio subwiki
