--- a/personal-issues/1743.md
+++ b/personal-issues/1743.md
@@ -1,5 +1,5 @@
 title:	Vipul Monday checklist | 2024-10-28
-state:	OPEN
+state:	CLOSED
 author:	vipulnaik
 labels:	
 comments:	0
@@ -8,14 +8,47 @@ projects:
 milestone:	
 number:	1743
 --
+## Personal projects
+
+### Cellbio subwiki
+
+- [x] ~5 minutes: Do some reading in preparation for future edits
+
 ## Personal chores
+
+### Cooking and food purchases
+
+- [x] ~15 minutes: Get groceries from Berkeley Bowl https://github.com/vipulnaik/diet-exercise-health/commit/4a2d77810e09b803a29d9bffaa69a31410fc9965
+- [x] ~5 minutes: Lentils prep (overnight soaking to cook tomorrow) https://github.com/vipulnaik/diet-exercise-health/commit/6b61d75b57723716da4ca93eb774016f0c41885f
+
+### Updates tracking and planning
+
+- [x] ~6 minutes: Add weekend summaries and week summary https://github.com/vipulnaik/daily-updates/commit/ffd7383e228696587ad36065b06f7e17785d08ff
 
 ### Health research, appointments, recording
 
 - [x] ~4 minutes: Update flu shot doc https://github.com/vipulnaik/diet-exercise-health/commit/ffa6763c6000fdc294eb9265b417dc925aad4207
 
+### Laundry
+
+- [x] ~4 minutes: Failed trip to get laundry started
 ## Other activities
+
+### Documents
+
+- [x] ~10 minutes: Prepare an initial draft of a document for sharing
 
 ### One-off conversations
 
 - [x] ~10 minutes: Exchange a few messages and take some notes for followup
+- [x] ~5 minutes: Exchange a few messages
+
+### Medical education
+
+#### Ninja Nerd videos (focused learning with eyes on screen for the most part)
+
+- [x] ~5 minutes: Continue consuming new content from the endocrine medicine playlist
+
+#### Other videos (not designed for concentrated education, eyes don't have to be on screen)
+
+- [x] ~25 minutes: Continue listening to a video
