--- a/personal-issues/1757.md
+++ b/personal-issues/1757.md
@@ -16,11 +16,18 @@ number:	1757
 
 ## Personal chores
 
+### Updates tracking and planning
+
+- [x] ~4 minutes: Add Sunday summary and week summary https://github.com/vipulnaik/daily-updates/commit/5a09f5b5018f5051dd927b81a44fa2ee6ac448e2
 ### Stocks
 
 - [x] ~1 hour 20 minutes: Amazon Hub Locker trip + Walgreens trip https://github.com/vipulnaik/diet-exercise-health/commit/14331d227a821a13e2f99c424f1c99330bfd6342
 
 ## Other activities
+
+### One-off conversations
+
+- [x] ~10 minutes: Take some notes for two recent conversations
 
 ### Medical education
 
