Add summaries for period of 2024-11-16 to 2024-11-17; add week summary; fetch latest personal issues

--- a/personal-issues/1762.md
+++ b/personal-issues/1762.md
@@ -1,5 +1,5 @@
 title:	Vipul Saturday checklist | 2024-11-16
-state:	OPEN
+state:	CLOSED
 author:	vipulnaik
 labels:	
 comments:	0
@@ -8,8 +8,51 @@ projects:
 milestone:	
 number:	1762
 --
+## Personal projects
+
+### AI Watch
+
+- [x] ~38 minutes: Start looking into riceissa/aiwatch#176 and work on fixes and refinements as part of riceissa/aiwatch#177
+
+### Timelines wiki
+
+- [x] ~1 hour: Start work on periodic expansion of timeline of web vitals https://github.com/vipulnaik/working-drafts/commit/f77d2d568278b3bec0c8186409c67d889947f667
+
+## Personal finances, income and taxes
+
+### Financial transactions
+
+- [x] ~2 minutes: Take care of a money transfer and set up some preferences for future stuff
+
 ## Personal chores
 
 ### Cooking and food purchases
 
-- [x] ~4 minutes: Finish lentils prep from yesterday https://github.com/vipulnaik/diet-exercise-health/commit/e488587d5c396522c60855ce170c5266ccc18f63
+- [x] ~15 minutes: Finish lentils prep from yesterday https://github.com/vipulnaik/diet-exercise-health/commit/e488587d5c396522c60855ce170c5266ccc18f63 (going forward I am counting emptying and washing time)
+- [x] ~55 minutes:  Get groceries from Trader Joe's https://github.com/vipulnaik/diet-exercise-health/commit/80e70691cfbeb20f833ad14a856df6087442352a
+- [x] ~25 minutes: Rice prep https://github.com/vipulnaik/diet-exercise-health/commit/b6d09aeceedcc3bf00c383535a507d39a990f12c (larger load than before; also, going forward I am counting emptying and cleaning time)
+
+### Updates tracking and planning
+
+- [x] ~10 minutes: Add weekday summaries https://github.com/vipulnaik/daily-updates/commit/c264ff7ce45d186db14d9fd6bb1eb57ca8074406
+
+### Personal devops
+
+- [x] ~5 minutes: Clear out and organize old personal screenshots
+
+### Cleaning
+
+- [x] ~15 minutes: Discard potatoes, then clean up the mess; also take the discarded potatoes out to put in the trash https://github.com/vipulnaik/diet-exercise-health/commit/01862a4bbc98ceb98e10644e73a1711ac3c6fc8c
+
+## Other activities
+
+### Medical education
+
+#### Ninja Nerd videos (focused learning with eyes on screen for the most part)
+
+- [x] ~10 minutes: Continue consuming new content from the endocrine medicine playlist
+
+#### Other videos (not designed for concentrated education, eyes don't have to be on screen)
+
+- [x] ~5 minutes: Continue watching a video
+- [x] ~5 minutes: Continue watching a video
