Add summaries for period of 2024-11-18 to 2024-11-22; fetch latest personal issues

--- a/personal-issues/1764.md
+++ b/personal-issues/1764.md
@@ -1,5 +1,5 @@
 title:	Vipul Monday checklist | 2024-11-18
-state:	OPEN
+state:	CLOSED
 author:	vipulnaik
 labels:	
 comments:	0
@@ -8,7 +8,26 @@ projects:
 milestone:	
 number:	1764
 --
+## Personal projects
+
+### Timelines wiki
+
+- [x] ~8 minutes: Read through some stuff that will inform my upcoming expansion of the timeline of AI safety
+
 ## Personal chores
+
+### Cooking and food purchases
+
+- [x] ~7 minutes: Lentils prep to cook tomorrow https://github.com/vipulnaik/diet-exercise-health/commit/7d16c16bacf316824b2387a23513174156c68779
+
+### Health research, appointments, recording
+
+- [x] ~3 minutes: Take a pulse oximeter reading https://github.com/vipulnaik/diet-exercise-health/commit/433ca28fd10b53ce83ab67be3b2d187584a0007c
+- [x] ~3 minutes: Take a breath test reading https://github.com/vipulnaik/diet-exercise-health/commit/65ce50244694e96430cfcc05af7525c48a4e6bd7
+
+### Updates tracking and planning
+
+- [x] ~6 minutes: Add weekend summary and week summary https://github.com/vipulnaik/daily-updates/commit/f975c72dc8cee4426007b5d21db91ed425ca0760
 
 ### Laundry
 
@@ -34,4 +53,4 @@ number:	1764
 
 - [x] ~15 minutes: Watch / listen to a video
 - [x] ~40 minutes: Listen to a three-part video series that I had listened to a while back, now that I have more background medical knowledge
-
+- [x] ~5 minutes: Continue watching a video
