Add summaries for period of 2024-11-23 to 2024-11-24; add week summary; fetch latest personal issues

--- a/personal-issues/1769.md
+++ b/personal-issues/1769.md
@@ -1,5 +1,5 @@
 title:	Vipul Saturday checklist | 2024-11-23
-state:	OPEN
+state:	CLOSED
 author:	vipulnaik
 labels:	
 comments:	0
@@ -8,17 +8,32 @@ projects:
 milestone:	
 number:	1769
 --
+## Personal projects
+
+### Timelines wiki
+
+- [x] ~55 minutes: Continue work on timeline of Google Search https://github.com/vipulnaik/working-drafts/commit/7f4df2c79763894f8420b8a940df91a14c175926 https://github.com/vipulnaik/working-drafts/commit/ccd65d683fc6cf071b65a1bb70d2f392182ca5ed
+- [x] ~2 minutes: Make minor fixes to timeline of web vitals https://github.com/vipulnaik/working-drafts/commit/b68159c53d5cc52319911eb12280d5a996a2a052
+
 ## Personal chores
+
+### Updates tracking and planning
+
+- [x] ~10 minutes: Add weekday summaries https://github.com/vipulnaik/daily-updates/commit/89e97dc3fe9d41c866f2483c8652a9b43aa58b10
 
 ### Cooking and food purchases
 
 - [x] ~55 minutes: Get groceries from Trader Joe's https://github.com/vipulnaik/diet-exercise-health/commit/e067fe7663487bdefe85cd15fb6b0ab5a4b095c4
 - [x] ~25 minutes: Rice prep https://github.com/vipulnaik/diet-exercise-health/commit/9ce4bebeaae7484839b77d178247d2308a849586
 
+### Health research, appointments, recording
+
+- [x] ~3 minutes: Take a breath test reading https://github.com/vipulnaik/diet-exercise-health/commit/dad20216e4c7eb7ef5d55e2bb910c4f109b22202
 ## Other activities
 
 ### Medical education
 
 #### Ninja Nerd videos (focused learning with eyes on screen for the most part)
 
-- [ ] ~15 minutes so far: Continue consuming new content from the endocrine medicine playlist
+- [x] ~15 minutes: Continue consuming new content from the endocrine medicine playlist
+- [x] ~5 minutes: Continue consuming new content from the cardiovascular medicine playlist
