Add summaries for period of 2024-12-02 to 2024-12-07; fetch latest personal issues

--- a/personal-issues/1778.md
+++ b/personal-issues/1778.md
@@ -1,5 +1,5 @@
 title:	Vipul Monday checklist | 2024-12-02
-state:	OPEN
+state:	CLOSED
 author:	vipulnaik
 labels:	
 comments:	0
@@ -13,7 +13,23 @@ number:	1778
 ### Timelines wiki
 
 - [x] ~2 minutes: Make a small fix https://github.com/vipulnaik/working-drafts/commit/4316f1e212b747e4a23696ed8c10fbed70f86e36
+- [x] ~5 minutes: Start review of timeline of MIRI
+
+### Wikipedia Views
+
+- [x] ~2 minutes: Switch month
+
+## Personal finances, income and taxes
+
+### Financial tracking and recording
+
+- [x] ~6 minutes: Add recent credit reports and scores https://github.com/vipulnaik/personal-finances/commit/2f234b499119a75a876a00b16c287c23c7ebd78d
+
 ## Personal chores
+
+### Updates tracking and planning
+
+- [x] ~8 minutes: Add weekend summaries, week summary, and month summary https://github.com/vipulnaik/daily-updates/commit/06b1e7f81fcb87d887054b1014ed9c6fd2d07425#diff-9ae5be03ddc665b86105ef67c02cc79e34f40128e68215b6b45cbe57bb838e12
 
 ### Cooking and food purchases
 
@@ -25,9 +41,9 @@ number:	1778
 
 #### Medical school curriculum education: Ninja Nerd videos (focused learning with eyes on screen for the most part)
 
-- [ ] ~20 minutes so far: Continue watching new content from the cardiovascular medicine playlist (including 10 minutes multiplexed with watching Ninja Nerd videos)
+- [x] ~20 minutes: Continue watching new content from the cardiovascular medicine playlist (including 10 minutes multiplexed with watching Ninja Nerd videos)
 
 #### Health optimization space education: content not designed for concentrated education, eyes don't have to be on screen
 
 - [x] ~5 minutes: Finish a video
-- [ ] ~40 minutes so far: Start a video
+- [x] ~40 minutes: Start a video
