Add summaries for 2024-12-08; add week summary; fetch latest personal issues

--- a/personal-issues/1784.md
+++ b/personal-issues/1784.md
@@ -1,5 +1,5 @@
 title:	Vipul Sunday checklist | 2024-12-08
-state:	OPEN
+state:	CLOSED
 author:	vipulnaik
 labels:	
 comments:	0
@@ -17,9 +17,13 @@ number:	1784
 
 ## Personal chores
 
+### Updates tracking and planning
+
+- [x] ~12 minutes: Add summaries for week so far https://github.com/vipulnaik/daily-updates/commit/73de3a33d4aeea0f7e3896ec68a9e48793b34228
+
 ### Cooking and food purchases
 
-- [x] ~10 minutes: Lentils prep for lentils soaked yesterday https://github.com/vipulnaik/diet-exercise-health/commit/90a8f68809c3645e0f520fc98c8b91e188ece8b6 (cleanup portion; cooking portion of about 5 minutes was multiplexed with listening to a video)
+- [x] ~8 minutes: Lentils prep for lentils soaked yesterday https://github.com/vipulnaik/diet-exercise-health/commit/90a8f68809c3645e0f520fc98c8b91e188ece8b6 (cleanup portion excluding 2 multiplexed minutes; cooking portion of about 5 minutes was multiplexed with listening to a video)
 - [x] ~1 hour 5 minutes: Get groceries from Trader Joe's https://github.com/vipulnaik/diet-exercise-health/commit/503a38a2de867c2606a3a85b99df747f6041992b
 
 ### Health research, appointments, recording
@@ -38,6 +42,10 @@ number:	1784
 
 ## Other activities
 
+### Periodic conversations
+
+- [x] ~2 hours 10 minutes so far: Chat with parents
+
 ### Entertainment and self-education portal
 
 - [x] ~4 minutes: Add two channels to ongoing consumption list https://github.com/vipulnaik/entertainment-and-self-education/commit/bd7bb317017cbebfa5bff649f3a8951b1e904fcb
@@ -46,9 +54,13 @@ number:	1784
 
 #### Medical school curriculum education: Ninja Nerd videos (focused learning with eyes on screen for the most part)
 
-- [ ] ~10 minutes so far: Continue watching new content from the cardiovascular medicine playlist
+- [x] ~15 minutes: Continue watching new content from the cardiovascular medicine playlist
+
+#### Health optimization space education: content not designed for concentrated education, eyes don't have to be on screen
+
+- [x] ~30 minutes: Start watching a video
 
 #### Stories of patients, doctors, nurses, and caregivers
 
 - [x] ~25 minutes: Watch a YouTube video update from a channel I follow
-- [ ] ~45 minutes so far: Continue listening to a video
+- [x] ~55 minutes: Finish listening to a video
