Add summaries for period of 2024-12-09 to 2024-12-12; fetch latest personal issues

--- a/personal-issues/1785.md
+++ b/personal-issues/1785.md
@@ -1,5 +1,5 @@
 title:	Vipul Monday checklist | 2024-12-09
-state:	OPEN
+state:	CLOSED
 author:	vipulnaik
 labels:	
 comments:	0
@@ -8,12 +8,46 @@ projects:
 milestone:	
 number:	1785
 --
+## Personal projects
+
+### Groupprops subwiki
+
+- [x] ~4 minutes: Review and reply to a message
+
+## Personal finances, income and taxes
+
+### Financial tracking and recording
+
+- [x] ~3 minutes: Add a credit report https://github.com/vipulnaik/personal-finances/commit/e89a24538442d5cd07983fe254d7388ce97467d7
+
 ## Personal chores
+
+### Cooking and food purchases
+
+- [x] ~40 minutes: Meal prep https://github.com/vipulnaik/diet-exercise-health/commit/b09a95f6a2082eb5467322395223125ae00f53da excluding 55 minutes multiplexed with watching videos (30 during prep and 25 during cleanup)
 
 ### Health research, appointments, recording
 
 - [x] ~10 minutes: Rewrite a part of the health profile https://github.com/vipulnaik/diet-exercise-health/commit/3a889610ebe10362bcb7a0329a42f526fc64eae7
+- [x] ~20 minutes: Continue work on family health history
 
 ### Cleaning (periodic tasks)
 
 - [x] ~5 minutes: Clean restroom sink
+
+### Updates tracking and planning
+
+- [x] ~4 minutes: Add Sunday summaries + week summary https://github.com/vipulnaik/daily-updates/commit/cf24fd52947a44dc975c9f97af6fb6ab3359a058
+
+## Other activities
+
+### Health learning (general stuff that is not tied to immediate personal health action and doesn't involve active documentation work)
+
+#### Medical school curriculum education: Ninja Nerd videos (focused learning with eyes on screen for the most part)
+
+- [x] ~10 minutes: Continue watching new content from the cardiovascular medicine playlist (all 10 minutes multiplexed with meal prep)
+
+#### Health optimization space education: content not designed for concentrated education, eyes don't have to be on screen
+
+- [x] ~50 minutes: Continue listening to a video (including 10 minutes multiplexed with meal prep and 20 minutes multiplexed with post-meal cleanup)
+- [x] ~1 hour 50 minutes: Start listening to a video (including 10 minutes multiplexed with meal prep and 5 minutes multiplexed with post-meal cleanup) (I had listened to the initial portion a few months ago, but had not retained a lot of it; with my increased background knowledge, I'm now able to make more sense of it)
