Add summaries for period of 2024-12-13 to 2024-12-15; add week summary; fetch latest personal issues

--- a/personal-issues/1789.md
+++ b/personal-issues/1789.md
@@ -1,5 +1,5 @@
 title:	Vipul Friday checklist | 2024-12-13
-state:	OPEN
+state:	CLOSED
 author:	vipulnaik
 labels:	
 comments:	0
@@ -18,6 +18,10 @@ number:	1789
 
 - [x] ~10 minutes: Offer incremental feedback on timeline of AI ethics violations
 
+### Analytics
+
+- [x] ~2 minutes: Review analytics.vipulnaik.com data for November and early December
+
 ## Personal finances, income and taxes
 
 ### Financial tracking and recording
@@ -25,6 +29,10 @@ number:	1789
 - [x] ~2 minutes: Update contractwork balance to reflect November 2024 payments due to @sebastiansanchez123 https://github.com/vipulnaik/personal-finances/commit/3c57945e69a609032b0c718e6ac6ebc3260414ac and update a minimum balance https://github.com/vipulnaik/personal-finances/commit/052904a20f21eeed1e7ffc77410b1ca24dc01eba
 
 ## Personal chores
+
+### Updates tracking and planning
+
+- [x] ~8 minutes: Add summaries for week so far https://github.com/vipulnaik/daily-updates/commit/55ef6db01cf2de759a9608454921100ac43230d6
 
 ### Health research, appointments, recording
 
@@ -40,6 +48,7 @@ number:	1789
 - [x] ~30 minutes: Do some reorg of virtual documents about physical documents
 - [x] ~15 minutes: Continue with planning for potential future travel
 - [x] ~9 minutes: Do some status documentation
+- [x] ~20 minutes: Put together a plan of next steps for bureaucratic stuff
 
 ### Laundry
 
