Fetch latest personal issues (mainly to pull in a few small edits)

--- a/personal-issues/1789.md
+++ b/personal-issues/1789.md
@@ -62,7 +62,7 @@ number:	1789
 
 - [x] ~15 minutes: Continue watching new content from the cardiovascular medicine playlist, finishing the playlist
 - [x] ~2 minutes: Do a quick review of older content from the cardiovascular medicine playlist
-- [x] ~15 minutes: Start watching new content from the circulatory medicine playlist
+- [x] ~15 minutes: Start watching new content from the circulatory system playlist
 
 #### Health optimization space education: content not designed for concentrated education, eyes don't have to be on screen
 
