--- a/personal-issues/1790.md
+++ b/personal-issues/1790.md
@@ -61,7 +61,7 @@ number:	1790
 
 #### Medical school curriculum education: Ninja Nerd videos (focused learning with eyes on screen for the most part)
 
-- [x] ~10 minutes: Review content from the circulatory medicine playlist (that I had watched previously, likely as part of a cardiovascular playlist) (multiplexed with potatoes prep)
+- [x] ~10 minutes: Review content from the circulatory system playlist (that I had watched previously, likely as part of the cardiovascular physiology playlist) (multiplexed with potatoes prep)
 
 #### Health optimization space education: content not designed for concentrated education, eyes don't have to be on screen
 
