--- a/personal-issues/1791.md
+++ b/personal-issues/1791.md
@@ -34,7 +34,7 @@ number:	1791
 
 #### Medical school curriculum education: Ninja Nerd videos (focused learning with eyes on screen for the most part)
 
-- [x] ~5 minutes: Finish review of a video from the circulatory medicine playlist (that I had watched previously, likely as part of a cardiovascular playlist)
+- [x] ~5 minutes: Finish review of a video from the circulatory system playlist (that I had watched previously, likely as part of the cardiovascular physiology playlist)
 
 #### Health optimization space education: content not designed for concentrated education, eyes don't have to be on screen
 
