--- a/personal-issues/1792.md
+++ b/personal-issues/1792.md
@@ -1,5 +1,5 @@
 title:	Vipul Monday checklist | 2024-12-16
-state:	OPEN
+state:	CLOSED
 author:	vipulnaik
 labels:	
 comments:	0
@@ -24,6 +24,9 @@ number:	1792
 
 - [x] ~3 minutes: Make updates to blood test plans https://github.com/vipulnaik/diet-exercise-health/commit/de4c01ee21cc467e63685dcafedae25da2545a59 https://github.com/vipulnaik/diet-exercise-health/commit/4f7209532882e008571732b44f60811d3db21418
 
+### Updates tracking and planning
+
+- [x] ~8 minutes: Add rest-of-week summaries and week summary https://github.com/vipulnaik/daily-updates/commit/6f4397dbdbc4f378584e8cd0d251869aaddae4c1
 ### Other
 
 - [x] ~1 minute: Record confirmation regarding phone plan update
@@ -34,7 +37,7 @@ number:	1792
 
 #### Medical school curriculum education: Ninja Nerd videos (focused learning with eyes on screen for the most part)
 
-- [x] ~20 minutes: Continue watching new content from the circulatory medicine playlist (15 minutes of this was multiplexed with meal prep)
+- [x] ~20 minutes: Continue watching new content from the circulatory system playlist (15 minutes of this was multiplexed with meal prep)
 
 #### Health optimization space education: content not designed for concentrated education, eyes don't have to be on screen
 
