Add summaries for period of 2024-12-30 to 2025-01-03; add December 2024 month summary; add 2024 year summary; fetch latest personal issues

--- a/personal-issues/1803.md
+++ b/personal-issues/1803.md
@@ -41,7 +41,7 @@ number:	1803
 
 #### Medical school curriculum education: Ninja Nerd videos (focused learning with eyes on screen for the most part)
 
-- [x] ~10 minutes: Continue watching the renal medicine playlist (multiplexed with meal prep)
+- [x] ~10 minutes: Continue watching new content from the renal medicine playlist (multiplexed with meal prep)
 
 #### Health optimization space education: content not designed for concentrated education, eyes don't have to be on screen
 
