--- a/personal-issues/1806.md
+++ b/personal-issues/1806.md
@@ -1,5 +1,5 @@
 title:	Vipul Monday checklist | 2024-12-30
-state:	OPEN
+state:	CLOSED
 author:	vipulnaik
 labels:	
 comments:	0
@@ -8,13 +8,22 @@ projects:
 milestone:	
 number:	1806
 --
+## Personal projects
+
+### Contract work for Vipul Naik
+
+- [x] ~2 minutes: Reply to an email
+
 ## Personal chores
 
 ### Health research, appointments, recording
 
-- [ ] ~1 hour 5 minutes so far: Place order for blood tests and book the appointment for the blood draw https://github.com/vipulnaik/diet-exercise-health/commit/a66f5b47c7006b2b04e00f22b35c23382e7bc6a1
+- [x] ~1 hour 20 minutes: Place order for blood tests and book the appointment for the blood draw https://github.com/vipulnaik/diet-exercise-health/commit/a66f5b47c7006b2b04e00f22b35c23382e7bc6a1; execute on the various preparatory steps including calendar reminders
 - [x] ~3 minutes: Take a breath test reading https://github.com/vipulnaik/diet-exercise-health/commit/8dc7164bd2f45a345605eea81b0fdd28023acf44
 
+### Updates tracking and planning
+
+- [x] ~6 minutes: Add weekend summaries and week summary https://github.com/vipulnaik/daily-updates/commit/4cc603a754c0f1ff8f65d8ca6401f0e7da3735de
 ## Other activities
 
 ### One-off conversations
