Add summaries for period of 2025-01-06 to 2025-01-10; fetch latest personal issues

--- a/personal-issues/1814.md
+++ b/personal-issues/1814.md
@@ -43,7 +43,7 @@ number:	1814
 
 ### Rent payment
 
-- [x] ~12 minutes: Prepare rent check for mailing
+- [x] ~14 minutes: Prepare rent check for mailing; later, mail it and do associated recording
 
 ### House repairs
 
