--- a/personal-issues/1815.md
+++ b/personal-issues/1815.md
@@ -1,5 +1,5 @@
 title:	Vipul Wednesday checklist | 2025-01-08
-state:	OPEN
+state:	CLOSED
 author:	vipulnaik
 labels:	
 comments:	0
@@ -10,10 +10,36 @@ number:	1815
 --
 ## Personal chores
 
+### Cooking and food purchases
+
+- [x] ~20 minutes: Rice prep https://github.com/vipulnaik/diet-exercise-health/commit/f9e598179435845c0f7f01a96c0ddfa69db5a681 (excluding 5 minutes of cleanup multiplexed with listening to a video)
+- [x] ~1 hour 5 minutes: Potatoes prep https://github.com/vipulnaik/diet-exercise-health/commit/8165e25cb83cda97e53fd2636a4ef154576cdb71 excluding 20 minutes multiplexed with watching Ninja Nerd videos)
+
 ### Administrative / travel / bureaucracy
 
 - [x] ~10 minutes: Continue with travel planning and related figuring-stuff-out
+- [x] ~2 minutes: Catch up on some news
 
 ### Personal devops
 
 - [x] ~2 minutes: Back up my browsing history
+
+### Updates tracking and planning
+
+- [x] ~6 minutes: Add weekend summaries and week summary https://github.com/vipulnaik/daily-updates/commit/90f1e8fd6395d4379b3e275beb982e4482110131
+
+## Other activities
+
+### One-off conversations
+
+- [x] ~20 minutes: Impromptu chat with a friend
+
+### Health learning (general stuff that is not tied to immediate personal health action and doesn't involve active documentation work)
+
+#### Medical school curriculum education: Ninja Nerd videos (focused learning with eyes on screen for the most part)
+
+- [x] ~30 minutes: Continue watching new content from the Ninja Nerd video series on the eye (including 20 minutes multiplexed with potatoes prep)
+
+#### Health optimization space education: content not designed for concentrated education, eyes don't have to be on screen
+
+- [x] ~50 minutes: Finish listening to a videoo
