Add summaries for period of 2025-01-13 to 2025-01-25; add week summary for week of 2025-01-13 to 2025-01-19; add num_cpc_ltbcs column and populate it for the new rows; fetch latest personal issues

--- a/personal-issues/1825.md
+++ b/personal-issues/1825.md
@@ -1,5 +1,5 @@
 title:	Vipul Saturday checklist | 2025-01-18
-state:	OPEN
+state:	CLOSED
 author:	vipulnaik
 labels:	
 comments:	0
@@ -14,7 +14,24 @@ number:	1825
 
 - [x] ~10 minutes: Do quarterly review and update of issues
 
+### Contract work for Vipul Naik
+
+- [x] ~5 minutes: Add December 2024 payments due to Gabriel Bobis https://github.com/vipulnaik/contractwork/commit/676d61c035e091192a93333c23d0f6f31c769830
+- [x] ~15 minutes: Add December 2024 payments due to @sebastiansanchez123 https://github.com/vipulnaik/contractwork/commit/0e9c48cc968684c76284e38382bbcf178db00e2d
+- [x] ~8 minutes: Add year-round timelines wiki hosting and maintenance payment to @riceissa https://github.com/vipulnaik/contractwork/commit/bf6b92eb6af8b3740bda7f4dfabbc931cf1d6dcb and take various related actions
+- [x] ~4 minutes: Update details for two recent wire transfers to reflect the date they were received https://github.com/vipulnaik/contractwork/commit/e9a881799d223f8a614738d866caccfb3f74ed4a
+
+## Personal finances, income and taxes
+
+### Financial tracking and recording
+
+- [x] ~3 minutes: Download a couple of statements https://github.com/vipulnaik/personal-finances/commit/6351cb2cb07d710d17e21d6740d37502870fb544
 ## Personal chores
+
+### Cooking and food purchases
+
+- [x] ~1 hour 5 minutes: Get groceries from Trader Joe's https://github.com/vipulnaik/diet-exercise-health/commit/304b116207fb14c79b33ebc2e453bb903d9cf86b
+- [x] ~25 minutes: Rice prep https://github.com/vipulnaik/diet-exercise-health/commit/fdc2f2750540b9e43a335062b273fb058a421e5e
 
 ### Health research, appointments, recording
 
@@ -24,11 +41,29 @@ number:	1825
 ### Administrative / travel / bureaucracy
 
 - [x] ~4 minutes: Check and update status around a few travel-related bureaucratic items
+- [x] ~5 minutes: Do a monthly status check
+
+### Updates tracking and planning
+
+- [x] ~6 minutes: Add weekend summaries + week summary for last week https://github.com/vipulnaik/daily-updates/commit/648a4c72b0819fdcb8bbfb0d96067e003a0b16d8
+
+### Personal devops
+
+- [x] ~10 minutes: Back up my Slack self-chat logs
 
 ## Other activities
+
+### One-off conversations
+
+- [x] ~10 minutes: Exchange a few messages
+- [x] ~2 minutes: Exchange a few messages
+
+### Documents
+
+- [x] ~5 minutes: Review a document
 
 ### Health learning (general stuff that is not tied to immediate personal health action and doesn't involve active documentation work)
 
 #### Health optimization space education: content not designed for concentrated education, eyes don't have to be on screen
 
-- [ ] ~35 minutes so far: Start watching / listening to a video
+- [x] ~1 hour 10 minutes: Start watching / listening to a video
